--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Test</title>
-        <link rel="stylesheet" href="./css/main.css">
-    </head>
-    <body>
-        <h1>Hello World</h1>
-        <button>Click</button>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Test</title>
+    <link rel="stylesheet" href="./css/main.css">
+</head>
+
+<body>
+    <h1>Hello World</h1>
+    <button>Click</button>
+    <p>umaraliyeva shabbona</p>
+</body>
+
 </html>
